--- a/IfcPlugins/pom.xml
+++ b/IfcPlugins/pom.xml
@@ -113,13 +113,13 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.opensourcebim</groupId>
-			<artifactId>PluginBase</artifactId>
-			<version>1.5.8</version>
+			<artifactId>pluginbase</artifactId>
+			<version>1.5.10</version>
 		</dependency>
 		<dependency>
 			<groupId>org.opensourcebim</groupId>
-			<artifactId>Shared</artifactId>
-			<version>1.5.8</version>
+			<artifactId>shared</artifactId>
+			<version>1.5.10</version>
 		</dependency>
 	</dependencies>
 	<scm>
