--- a/IfcPlugins/pom.xml
+++ b/IfcPlugins/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>ifcplugins</artifactId>
 	<groupId>org.opensourcebim</groupId>
-	<version>0.0.4-SNAPSHOT</version>
+	<version>0.0.4</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -126,7 +126,7 @@
 		<url>https://github.com/opensourceBIM/IfcPlugins.git</url>
 		<connection>scm:git:https://github.com/opensourceBIM/IfcPlugins.git</connection>
 		<developerConnection>scm:git:https://github.com/opensourceBIM/IfcPlugins.git</developerConnection>
-	  <tag>HEAD</tag>
+	  <tag>ifcplugins-0.0.4</tag>
   </scm>
 	<organization>
 		<name>OpenSource BIM</name>
