--- a/IfcPlugins/pom.xml
+++ b/IfcPlugins/pom.xml
@@ -7,7 +7,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<description>BIMserver plugin that provides IFC serializers/deserializers</description>
-		<build>
+	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<resources>
 			<resource>
@@ -51,6 +51,12 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+			<id>central</id>
+			<url>http://repo1.maven.org/maven2</url>
+		</repository>
+	</repositories>
 	<profiles>
 		<profile>
 			<id>release</id>
@@ -114,20 +120,20 @@
 		<dependency>
 			<groupId>org.opensourcebim</groupId>
 			<artifactId>pluginbase</artifactId>
-			<version>1.5.13</version>
+			<version>1.5.15</version>
 		</dependency>
 		<dependency>
 			<groupId>org.opensourcebim</groupId>
 			<artifactId>shared</artifactId>
-			<version>1.5.13</version>
+			<version>1.5.15</version>
 		</dependency>
 	</dependencies>
 	<scm>
 		<url>https://github.com/opensourceBIM/IfcPlugins.git</url>
 		<connection>scm:git:https://github.com/opensourceBIM/IfcPlugins.git</connection>
 		<developerConnection>scm:git:https://github.com/opensourceBIM/IfcPlugins.git</developerConnection>
-	  <tag>HEAD</tag>
-  </scm>
+		<tag>HEAD</tag>
+	</scm>
 	<organization>
 		<name>OpenSource BIM</name>
 		<url>opensourcebim.org</url>
