--- a/IfcPlugins/pom.xml
+++ b/IfcPlugins/pom.xml
@@ -163,12 +163,12 @@
 		<dependency>
 			<groupId>org.opensourcebim</groupId>
 			<artifactId>pluginbase</artifactId>
-			<version>1.5.37</version>
+			<version>1.5.44-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.opensourcebim</groupId>
 			<artifactId>shared</artifactId>
-			<version>1.5.37</version>
+			<version>1.5.44-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<scm>
