--- a/IfcPlugins/pom.xml
+++ b/IfcPlugins/pom.xml
@@ -162,13 +162,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.opensourcebim</groupId>
-			<artifactId>pluginbase</artifactId>
-			<version>1.5.64-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.opensourcebim</groupId>
 			<artifactId>shared</artifactId>
-			<version>1.5.64-SNAPSHOT</version>
+			<version>1.5.64</version>
 		</dependency>
 	</dependencies>
 	<scm>
