--- a/IfcPlugins/pom.xml
+++ b/IfcPlugins/pom.xml
@@ -163,7 +163,7 @@
 		<dependency>
 			<groupId>org.opensourcebim</groupId>
 			<artifactId>shared</artifactId>
-			<version>1.5.65</version>
+			<version>1.5.66-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<scm>
