--- a/IfcPlugins/pom.xml
+++ b/IfcPlugins/pom.xml
@@ -5,6 +5,8 @@
 	<version>0.0.19-SNAPSHOT</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<timestamp>${maven.build.timestamp}</timestamp>
+		<maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssZ</maven.build.timestamp.format>
 	</properties>
 	<description>BIMserver plugin that provides IFC serializers/deserializers</description>
 	<build>
