--- a/IfcPlugins/pom.xml
+++ b/IfcPlugins/pom.xml
@@ -158,7 +158,7 @@
 		<dependency>
 			<groupId>org.opensourcebim</groupId>
 			<artifactId>shared</artifactId>
-			<version>1.5.81-SNAPSHOT</version>
+			<version>1.5.81</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
