--- a/IfcPlugins/pom.xml
+++ b/IfcPlugins/pom.xml
@@ -157,7 +157,7 @@
 		<dependency>
 			<groupId>org.opensourcebim</groupId>
 			<artifactId>shared</artifactId>
-			<version>1.5.90-SNAPSHOT</version>
+			<version>1.5.90</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
