--- a/IfcPlugins/pom.xml
+++ b/IfcPlugins/pom.xml
@@ -163,7 +163,7 @@
 		<dependency>
 			<groupId>org.opensourcebim</groupId>
 			<artifactId>shared</artifactId>
-			<version>1.5.109</version>
+			<version>1.5.110-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
