--- a/IfcPlugins/pom.xml
+++ b/IfcPlugins/pom.xml
@@ -54,7 +54,7 @@
 		<dependency>
 			<groupId>org.opensourcebim</groupId>
 			<artifactId>shared</artifactId>
-			<version>1.5.117-SNAPSHOT</version>
+			<version>1.5.116</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
