--- a/IfcPlugins/pom.xml
+++ b/IfcPlugins/pom.xml
@@ -63,6 +63,11 @@
       <version>1.2.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    <groupId>it.unimi.dsi</groupId>
+    <artifactId>fastutil</artifactId>
+    <version>8.2.2</version>
+</dependency>
   </dependencies>
   <repositories>
     <repository>
