--- a/IfcPlugins/pom.xml
+++ b/IfcPlugins/pom.xml
@@ -55,7 +55,7 @@
     <dependency>
       <groupId>org.opensourcebim</groupId>
       <artifactId>shared</artifactId>
-      <version>1.5.153-SNAPSHOT</version>
+      <version>1.5.155</version>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
