--- a/IfcPlugins/pom.xml
+++ b/IfcPlugins/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opensourcebim</groupId>
   <artifactId>ifcplugins</artifactId>
-  <version>0.0.101</version>
+  <version>0.0.102-SNAPSHOT</version>
   <name>IfcPlugins</name>
   <description>BIMserver plugin that provides IFC serializers/deserializers</description>
   <url>https://github.com/opensourceBIM/IfcPlugins/BIMserver</url>
@@ -28,7 +28,7 @@
     <connection>scm:git:https://github.com/opensourceBIM/IfcPlugins.git</connection>
     <developerConnection>scm:git:https://github.com/opensourceBIM/IfcPlugins.git</developerConnection>
     <url>https://github.com/opensourceBIM/IfcPlugins.git</url>
-    <tag>ifcplugins-0.0.101</tag>
+    <tag>HEAD</tag>
   </scm>
   <issueManagement>
     <system>GitHub</system>
