Feature/GitHub sync (#3)
* Initial commit

* Initial commit

* https://app.asana.com/0/1200852714700592/1203099333116440

* moved to folder

* fixed gitignore

* added output.ifc to .gitignore

* add hardcode for writeHeader()

* added ifc4x3 serializers

* fixed gitignore

* added support of ifc4x3 to json serializer

* changed schema name to IFC4X3_ADD1

* renamed schema to Schema.IFC4X3

* fixed error that attribute used for serialization

* Feature/ifc 4.3

* added brusnika repository

* moved pom.xml to root

* fixed targetPath

* fixed pom.xml

* removed extra deps

* revert project settings

---------

--- a/IfcPlugins/plugin/plugin.xml
+++ b/IfcPlugins/plugin/plugin.xml
@@ -25,16 +25,22 @@
 		<name>Ifc2x3tc1</name>
 	</JavaPlugin>
 	<JavaPlugin>
-		<interfaceClass>org.bimserver.plugins.serializers.SerializerPlugin</interfaceClass>
-		<implementationClass>org.bimserver.ifc.step.serializer.Ifc4StepSerializerPlugin</implementationClass>
-		<description>Ifc4 Serializer</description>
-		<name>Ifc4</name>
-	</JavaPlugin>
-	<JavaPlugin>
 		<interfaceClass>org.bimserver.plugins.serializers.StreamingSerializerPlugin</interfaceClass>
 		<implementationClass>org.bimserver.ifc.step.serializer.Ifc2x3tc1StepStreamingSerializerPlugin</implementationClass>
 		<description>Ifc2x3tc1 Streaming Serializer</description>
 		<name>Ifc2x3tc1 (Streaming)</name>
+	</JavaPlugin>
+	<JavaPlugin>
+		<interfaceClass>org.bimserver.plugins.deserializers.StreamingDeserializerPlugin</interfaceClass>
+		<implementationClass>org.bimserver.ifc.step.deserializer.Ifc2x3tc1StepStreamingDeserializerPlugin</implementationClass>
+		<description>Ifc2x3tc1 Step Streaming Deserializer</description>
+		<name>Ifc2x3tc1 (Streaming)</name>
+	</JavaPlugin>
+	<JavaPlugin>
+		<interfaceClass>org.bimserver.plugins.serializers.SerializerPlugin</interfaceClass>
+		<implementationClass>org.bimserver.ifc.step.serializer.Ifc4StepSerializerPlugin</implementationClass>
+		<description>Ifc4 Serializer</description>
+		<name>Ifc4</name>
 	</JavaPlugin>
 	<JavaPlugin>
 		<interfaceClass>org.bimserver.plugins.serializers.StreamingSerializerPlugin</interfaceClass>
@@ -49,10 +55,22 @@
 		<name>Ifc4 (Streaming)</name>
 	</JavaPlugin>
 	<JavaPlugin>
+		<interfaceClass>org.bimserver.plugins.serializers.SerializerPlugin</interfaceClass>
+		<implementationClass>org.bimserver.ifc.step.serializer.Ifc4x3StepSerializerPlugin</implementationClass>
+		<description>Ifc4x3 Serializer</description>
+		<name>Ifc4x3</name>
+	</JavaPlugin>
+	<JavaPlugin>
+		<interfaceClass>org.bimserver.plugins.serializers.StreamingSerializerPlugin</interfaceClass>
+		<implementationClass>org.bimserver.ifc.step.serializer.Ifc4x3StepStreamingSerializerPlugin</implementationClass>
+		<description>Ifc4 Streaming Serializer</description>
+		<name>Ifc4x3 (Streaming)</name>
+	</JavaPlugin>
+	<JavaPlugin>
 		<interfaceClass>org.bimserver.plugins.deserializers.StreamingDeserializerPlugin</interfaceClass>
-		<implementationClass>org.bimserver.ifc.step.deserializer.Ifc2x3tc1StepStreamingDeserializerPlugin</implementationClass>
-		<description>Ifc2x3tc1 Step Streaming Deserializer</description>
-		<name>Ifc2x3tc1 (Streaming)</name>
+		<implementationClass>org.bimserver.ifc.step.deserializer.Ifc4x3StepStreamingDeserializerPlugin</implementationClass>
+		<description>Ifc4x3 Step Streaming Deserializer</description>
+		<name>Ifc4x3 (Streaming)</name>
 	</JavaPlugin>
 	<JavaPlugin>
 		<interfaceClass>org.bimserver.plugins.modelcompare.ModelComparePlugin</interfaceClass>
