--- a/IfcPlugins/pom.xml
+++ b/IfcPlugins/pom.xml
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>org.opensourcebim</groupId>
       <artifactId>shared</artifactId>
-      <version>1.5.185-SNAPSHOT</version>
+      <version>1.5.185</version>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
