--- a/IfcPlugins/pom.xml
+++ b/IfcPlugins/pom.xml
@@ -43,7 +43,7 @@
     <dependency>
       <groupId>org.opensourcebim</groupId>
       <artifactId>shared</artifactId>
-      <version>1.6.0</version>
+      <version>1.6.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
